Modifyed source files of project

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
 		<artifactId>jetty-webapp</artifactId>
 		<version>8.1.0.RC5</version>
 	</dependency>
+	<dependency>
+		<groupId>com.google.inject.extensions</groupId>
+		<artifactId>guice-multibindings</artifactId>
+		<version>3.0</version>
+	</dependency>
+            
             
 	</dependencies> 
 </project>
