--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,10 @@
 		<artifactId>guice-multibindings</artifactId>
 		<version>3.0</version>
 	</dependency>
-            
-            
-	</dependencies> 
+    <dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-all</artifactId>
+	    <version>1.8.4</version>
+    </dependency>
+	</dependencies>
 </project>
